<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NORK01Client</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect">Connect To Device</string>
    <string name="disconnect">Disconnect From Device</string>
    <string name="start">Start Collection of Data</string>
    <string name="stop">Stop Collection of Data</string>
    <string name="send">Send Data For Analize</string>
    <string name="exit">Exit</string>
    

</resources>